<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.example.admin.balatetris.TetrisSurfaceView
        android:id="@+id/tetrisSv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Btn_style"
                android:id="@+id/left"
                android:text="@string/left"/>

            <Button
                android:id="@+id/up"
                style="@style/Btn_style"
                android:text="@string/up"/>

            <Button
                android:id="@+id/right"
                style="@style/Btn_style"
                android:text="@string/right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/pause"
                style="@style/Btn_style"
                android:text="@string/pause"/>

            <Button
                android:id="@+id/down"
                style="@style/Btn_style"
                android:text="@string/down"/>

            <Button
                android:id="@+id/hardDrop"
                style="@style/Btn_style"
                android:text="@string/hard_drop"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>